syntax = "proto3";

package io.radicalbit.nsdb.rpc;

message DumpTarget {
  string db = 1;
  string namespace = 2;
}

message DumpRequest {
  repeated DumpTarget targets = 1;
  string destPath = 2;
}

message DumpResponse {
  bool startedSuccessfully = 1;
  string errorMsg = 2;
  string dumpPath = 3;
}

message RestoreRequest {
  string sourcePath = 4;
}

message RestoreResponse {
  bool startedSuccessfully = 1;
  string path = 2;
  string errorMsg = 3;
}

service Dump {
  rpc CreateDump(DumpRequest) returns (DumpResponse);

  rpc Restore(RestoreRequest) returns (RestoreResponse);
}

